--- a/sass/Components/_button.scss
+++ b/sass/Components/_button.scss
@@ -6,7 +6,7 @@
     border: none;
     outline: none;
     color: $color-black;
-    padding: 0.8rem 3.5rem;
+    padding: 0.6rem 2.5rem;
     border-radius: 50px;
     cursor: pointer;
     min-width: 100px;
@@ -14,13 +14,14 @@
     user-select: none;
     text-align: center;
     box-shadow: 0 5px 5px rgba($color-black, .3);
+    margin-bottom: 0.5rem;
     &--size-l
     {
-        padding: 1.2rem 4.0rem;
+        padding: 1rem 3.5rem;
     }
     &--size-s
     {
-        padding: 0.6rem 2.5rem;
+        padding: 0.3rem 1.7rem;
     }
     &:hover
     {
