--- a/sass/Components/_feature.scss
+++ b/sass/Components/_feature.scss
@@ -6,12 +6,20 @@
 .feature
 {
     position: relative;
-    flex-basis: 30%;
-    height: 40rem;
+    flex-basis: 23%;
+    height: 32rem;
+    @include respond (mobile)
+    {
+        height: 28rem;
+    }
+    @include respond (mini-mobile)
+    {
+        height: 27rem;
+    }
     &__side
     {
         position: absolute;
-        height: 40rem;
+        height: 27rem;
         width: 100%;
         border-radius: 5rem;
         transition: all .8s ease;
@@ -19,6 +27,14 @@
         backface-visibility: hidden; 
         box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
         color: $color-white;
+        @include respond (mobile)
+        {
+            height: 24rem;
+        }
+        @include respond (mini-mobile)
+        {
+            height: 23rem;
+        }
         &--front
         {
             background-color: $color-white;
@@ -52,8 +68,16 @@
     {
         background-size: cover;
         background-blend-mode: screen;
-        height: 23rem;
+        height: 14rem;
         clip-path: ellipse(80% 70% at 50% 30%);
+        @include respond (mobile)
+        {
+            height: 12rem;
+        }
+        @include respond (mini-mobile)
+        {
+            height: 11rem;
+        }
         &--1
         {
             background-image: linear-gradient(to right,$color-blue-mint,$color-blue-dark),
@@ -72,24 +96,24 @@
     }
     &__heading
     {
-        font-size: 2.5rem;
+        font-size: 1.5rem;
         font-weight: 350;
         text-align: right;
         text-transform: uppercase;
         color: $color-white;
         position: absolute;
-        top: 12rem;
+        top: 7rem;
         right: 2rem;
         width: 75%;
         @include respond (mobile)
         {
-            font-size: 1.4rem;
-            text-align: center;
+            font-size: 1rem;
+            text-align: right;
         }
         @include respond (mini-mobile)
         {
-            font-size: 1.4rem;
-            text-align: center;
+            font-size: 0.9rem;
+            text-align: right;
         }
     }
     &__heading-span
@@ -129,7 +153,7 @@
             li 
             {
                 text-align: center;
-                font-size: 1.7rem;
+                font-size: 1rem;
                 padding: 1rem;
                 &:not(:last-child)
                 {
@@ -137,11 +161,11 @@
                 }
                 @include respond (mobile)
                 {
-                    font-size: 1.5rem;
+                    font-size: 0.9rem;
                 }
                 @include respond (mini-mobile)
                 {
-                    font-size: 1.5rem;
+                    font-size: 0.8rem;
                 }
             }
         }
@@ -164,12 +188,12 @@
     }
     &__price-only
     {
-        font-size: 1.4rem;
+        font-size: 1.5rem;
         text-transform: uppercase;
     }
     &__price-value
     {
-        font-size: 4rem;
+        font-size: 3rem;
         font-weight: 100;
         margin-bottom: 5rem;
     }
