--- a/sass/Components/_toast.scss
+++ b/sass/Components/_toast.scss
@@ -1,7 +1,7 @@
 #toast
 {
     position: fixed;
-    top: 46px;
+    top: 38px;
     right: 0;
     z-index: 999999;
 }
@@ -11,9 +11,9 @@
     align-items: center;
     background-color: $color-white;
     border-radius: 2px;
-    padding: 2rem 0;
-    min-width: 200px;
-    max-width: 350px;
+    padding: 1rem 0;
+    min-width: 17rem;
+    max-width: 32rem;
     border-left: 4px solid;
     box-shadow: 0 5px 8px rgba($color-primary-dark, 0.3);
     transition: all linear 0.3s;
@@ -51,16 +51,16 @@
     }
     & + & 
     {
-        margin-top: 2.4rem;
+        margin-top: 1rem;
     }
     &__icon 
     {
-        font-size: 2.4rem;
+        font-size: 1.5rem;
     }
     &__icon,
     &__close 
     {
-        padding: 0 1.6rem;
+        padding: 0 1rem;
     }
     &__body 
     {
@@ -68,21 +68,21 @@
     }
     &__title 
     {
-        font-size: 1.6rem;
+        font-size: 1.3rem;
         font-weight: 600;
         color: rgb(0, 0, 0);
         ;
     }
     &__msg 
     {
-        font-size: 1.4rem;
+        font-size: 1rem;
         color: $color-text;
-        margin-top: 6px;
+        margin-top: 3px;
         line-height: 1.5;
     }
     &__close 
     {
-        font-size: 2rem;
+        font-size: 1.5rem;
         color: rgba($color-black,.3);
         cursor: pointer;
     }
