--- a/sass/Base/_utilities.scss
+++ b/sass/Base/_utilities.scss
@@ -1,12 +1,10 @@
-.u-center-text
+.align-title-big
 {
     text-align: center !important;
+    margin: 4rem 0rem !important;
 }
-.u-margin-bottom-big
+.align-title-small
 {
-    margin: 4rem !important;
-}
-.u-margin-bottom-small
-{
-    margin-bottom: 3rem !important;
+    text-align: center !important;
+    margin: 1rem 0rem !important;
 }
