--- a/sass/Components/_end.scss
+++ b/sass/Components/_end.scss
@@ -2,7 +2,7 @@
 {
     display: flex;
     flex-direction: row;
-    padding: 0 15rem;
+    padding: 0rem 9rem 2rem 9rem;
     @include respond (mobile)
     {
         flex-direction: column;
