--- a/sass/Components/_form.scss
+++ b/sass/Components/_form.scss
@@ -1,62 +1,53 @@
-.form-left
+.form-ctn
 {
-    flex-basis: 40%;
-    @include respond (mobile)
-    {
-        flex-basis: 50%;
-        margin: auto;
-        padding: 2rem 1rem;
-    }
+    display: flex;
+    justify-content: space-evenly;
+    padding: 1rem 5rem;
     @include respond (mini-mobile)
     {
-        flex-basis: 50%;
-        margin: auto;
-        padding: 2rem 1rem;
+        flex-direction: column;
+    }
+}
+
+.form-left
+{
+    flex-basis: 30%;
+    margin: 0;
+    @include respond (mini-mobile)
+    {
+        padding: 1rem 2rem;
+    }
+    @include respond (mobile)
+    {
+        flex-basis: 40%;
     }
 }
 .form-right
 {
-    flex-basis: 40%;
-    @include respond (mobile)
-    {
-        flex-basis: 50%;
-        margin: auto; 
-        padding: 2rem 1rem;
-    }
+    flex-basis: 30%;
+    margin: 0;
     @include respond (mini-mobile)
     {
-        flex-basis: 50%;
-        margin: auto; 
-        padding: 2rem 1rem;
+        padding: 1rem 2rem;
+    }
+    @include respond (mobile)
+    {
+        flex-basis: 40%;
     }
 }
 .form 
 {
-    width: 28rem;
-    min-height: 8rem;
-    padding: 3.2rem 2.4rem;
+    padding: 2rem;
     text-align: center;
     background: $color-white;
     border-radius: 2px;
-    margin: 2.4rem;
     align-self: center;
     box-shadow: 0 2px 10px 0 rgba(51,62,73,.1);
-    @include respond (mobile)
-    {
-        padding: 0;
-        margin: 0;
-    }
-    @include respond (mini-mobile)
-    {
-        padding: 0;
-        margin: 0;
-    }
 }
 .form .heading 
 {
-    font-size: $default-font-size;
+    font-size: 1.5rem;
 }
-
 .form .desc 
 {
     text-align: center;
@@ -67,11 +58,10 @@
     margin-top: 1.6rem;
     font-weight: 300;
 }
-
 .form-group 
 {
     display: flex;
-    margin-bottom: 1.6rem;
+    margin-bottom: 5px;
     flex-direction: column;
 }
 
@@ -91,8 +81,8 @@
 
 .form-control 
 {
-    height: 35px;
-    padding: 0.8rem 1.2rem;
+    height: 30px;
+    padding: 0.5rem;
     border: 1px solid $color-primary-dark;
     border-radius: 3px;
     outline: none;
@@ -125,7 +115,7 @@
 {
     outline: none;
     background-color: $color-primary-dark;
-    margin-top: 1.2rem;
+    margin-top: 1rem;
     padding: 1rem 1.3rem;
     font-weight: 600;
     color: $color-gray-light;
@@ -143,5 +133,5 @@
 
 .spacer 
 {
-    margin-top: 3.6rem;
+    margin-top: 2rem;
 }
