--- a/assets/sass/Abstracts/_variables.scss
+++ b/assets/sass/Abstracts/_variables.scss
@@ -6,7 +6,7 @@ $color-gray-mint:rgb(177, 162, 150);
 $color-gray-light: rgb(247, 247, 247);
 $color-text: rgb(120, 120, 120);
 $color-white:rgb(255, 255, 255);
-$color-black: rgb(0, 0, 0);
+$color-black: rgba(0, 0, 0, 0.884);
 $color-warn: rgb(255, 183, 2);
 $color-deny:rgb(255, 98, 61);
 $color-success: rgb(71, 216, 100);
