--- a/assets/sass/Components/_feature.scss
+++ b/assets/sass/Components/_feature.scss
@@ -59,7 +59,7 @@
             }
 
             &-3 {
-                background-image: linear-gradient(to right, $color-blue-mint, $color-text);
+                background-image: linear-gradient(to right, $color-text, $color-black);
             }
         }
     }
