--- a/assets/sass/Base/_typography.scss
+++ b/assets/sass/Base/_typography.scss
@@ -7,21 +7,28 @@ body {
 
 .heading-primary {
     color: $color-white;
-    text-transform: uppercase;
     margin-bottom: 2rem;
+    font-family: 'Quicksand';
+    src: local('Quicksand Light'), local('Quicksand-Light'), url(https://fonts.gstatic.com/s/quicksand/v8/6xKodSZaM9iE8KbpRA_pgHYYT8L_.woff2) format('woff2');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 
     &--main {
         display: block;
-        font-size: 1.7rem;
-        font-weight: 400;
-        letter-spacing: 0.5rem;
+        font-size: 3rem;
+        font-weight: 300;
+        letter-spacing: 0.1rem;
+        line-height: 5rem;
     }
 
     &--sub {
         display: block;
-        font-size: 1rem;
-        font-weight: 700;
-        letter-spacing: 0.2rem;
+        font-size: 1.5rem;
+        font-weight: 400;
+        line-height: 2.4rem;
+    }
+
+    &--color {
+        color: $color-black;
     }
 }
 
